# everest-sqlite

./: CMakeLists.txt  README.md  dependencies.yaml
.github/workflows/: build_and_test.yaml
docs/: migrations.md
include/database/: database_exceptions.hpp  exceptions.hpp
include/database/sqlite/: connection.hpp  schema_updater.hpp  sqlite_connection.hpp  sqlite_schema_updater.hpp  sqlite_statement.hpp
include/everest/database/sqlite/: connection.hpp  schema_updater.hpp
include/everest_sqlite/database/sqlite/: connection.hpp  schema_updater.hpp  statement.hpp
lib/: CMakeLists.txt
lib/database/sqlite/: connection.cpp  schema_updater.cpp  sqlite_connection.cpp  sqlite_schema_updater.cpp  sqlite_statement.cpp  statement.cpp
lib/everest/database/sqlite/: connection.cpp  schema_updater.cpp  statement.cpp
lib/everest_sqlite/database/sqlite/: connection.cpp  schema_updater.cpp  statement.cpp
tests/: CMakeLists.txt  database_testing_utils.hpp  test_database_schema_updater.cpp  test_sqlite_statement.cpp
